# Infantry

./: CMakeLists.txt  model2.pb  model3.pb  model4.pb  model_2.pb  readme.txt
Infantry/: CMakeLists.txt
Infantry/libAim/autoAim/: CMakeLists.txt
Infantry/libAim/autoAim/include/: aim_assistant.h
Infantry/libAim/autoAim/src/: kalman_filter_by_opencv.cpp
Infantry/src/: robot_model.cpp
include/: board_serial_listen_thread.h  control_model.h  datathread.h  robot_model.h  serial_listen_thread.h
libAim/: CMakeLists.txt
libAim/autoAim/: CMakeLists.txt
libAim/autoAim/include/: CSM_model.h  Fft.h  Kalman_CSM.h  aim_assistant.h  aim_predict.h  aim_predict_pitch.h  auto_aim.h  kalman_filter_by_opencv.h
libAim/autoAim/src/: CSM_model.cpp  Fft.cpp  Kalman_CSM.cpp  MSRCR.cpp  aim_assistant.cpp  aim_predict.cpp  aim_predict_pitch.cpp  auto_aim.cpp  kalman_filter_by_opencv.cpp
libAim/autoPTZ/: CMakeLists.txt
libAim/autoPTZ/include/: autoptz.h
libAim/autoPTZ/src/: autoptz.cpp
libAim/autoTRN/: CMakeLists.txt
libAim/autoTRN/include/: Fft.h  autotrn.h
libAim/autoTRN/src/: Fft.cpp  autotrn.cpp
libAim/include/: base_aim.h
libAim/markAim/include/: mark_aim.h
libAim/markAim/src/: mark_aim.cpp
libAim/recognizeWiggle/: CMakeLists.txt
libAim/recognizeWiggle/include/: fast_fourier_transform.h  recognize_wiggle.h
libAim/recognizeWiggle/src/: fast_fourier_transform.cpp  recognize_wiggle.cpp
libAim/res/: aimdata.yaml
libAim/src/: base_aim.cpp
libBase/baseClasses/src/: base_thread.cpp
libBase/baseTools/: CMakeLists.txt
libBase/baseTools/src/: image_tool.cpp
libHardWare/mindVision/: CMakeLists.txt
libHardWare/mindVision/include/: mind_vision_thread.h
libHardWare/mindVision/res/: light_blue_config.yaml  light_red_config.yaml
libHardWare/mindVision/src/: mind_vision.cpp  mind_vision_thread.cpp
libHardWare/serialPort/include/: serial_interface.h  serial_packet.h
libHardWare/serialPort/src/: serial_interface.cpp  serial_packet.cpp  serial_port_debug.cpp
res/: ang.yaml  main_config.yaml  name.txt
src/: board_serial_listen_thread.cpp  control_model.cpp  datathread.cpp  main.cpp  robot_model.cpp  serial_listen_thread.cpp
unit_test/: CMakeLists.txt
unit_test/aim_test/: CMakeLists.txt  aim_test.cpp
