cmake_minimum_required(VERSION 3.5)
#set(CMAKE_CXX_COMPILER "/usr/bin/g++-4.2")
project(zimiao)
SET(OpenCV_DIR /usr/local/opencv3/share/OpenCV)
set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
find_package(Glog REQUIRED)
FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories(${GLOG_INCLUDE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/libHardWare/serialPort/include)
include_directories(${PROJECT_SOURCE_DIR}/libHardWare/usbCapture/include)
include_directories(${PROJECT_SOURCE_DIR}/libHardWare/mindVision/include)
include_directories(${PROJECT_SOURCE_DIR}/libAim/include)
include_directories(${PROJECT_SOURCE_DIR}/libAim/autoAim/include)
include_directories(${PROJECT_SOURCE_DIR}/libAim/markAim/include)
include_directories(${PROJECT_SOURCE_DIR}/libBase/baseClasses/include)
include_directories(${PROJECT_SOURCE_DIR}/libBase/baseTools/include)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/libBase)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/libHardWare)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/libAim)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_SRCS)

add_executable(example ${DIR_SRCS})

target_link_libraries(example SerialPort UsbCapture MindVision)
target_link_libraries(example pthread)
target_link_libraries(example AutoAim MarkAim)
target_link_libraries(example BaseClasses BaseTools)
target_link_libraries(example MVSDK)
find_package(OpenCV 3.4.3 REQUIRED)
target_link_libraries(example ${OpenCV_LIBS} ${GOLG_LIBRARY})
