cmake_minimum_required(VERSION 3.5)
project(aim_test)
find_package(OpenCV  REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -g -O0")
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/libBase/include)
include_directories(${PROJECT_SOURCE_DIR}/libHardWare/usbCapture/include)
include_directories(${PROJECT_SOURCE_DIR}/libAim/include)
FILE(GLOB SRC *.hpp *.cpp)

add_executable(${PROJECT_NAME} ${SRC})
target_link_libraries(${PROJECT_NAME} BaseClasses BaseTools pthread UsbCapture)
target_link_libraries(${PROJECT_NAME} AutoAim)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})